--- a/src/style/a.scss
+++ b/src/style/a.scss
@@ -2,4 +2,6 @@ $bgc:#c09;
 .box {
     background-color: $bgc;
     font-size: 30px;
+    display: flex;
+    background: url('../asset/img/main1.png'); //最好写成相对路径的格式,要不然不会显示
 }
